tests/ui/unit_struct.stderr
error: Unit structs are not supported
 --> tests/ui/unit_struct.rs:4:1
  |
4 | struct UnitStruct;
  | ^^^^^^^^^^^^^^^^^^
