tests/ui/unit_struct.rs
use dst_factory::make_dst_factory;

#[make_dst_factory]
struct UnitStruct;

fn main() {
}
